testdata/golden/sema/invalid/struct_literal_return_fields_for_empty.sg
// scenario: struct literal with fields in return for empty struct
type Empty = {}

fn test_fields_for_empty() -> Empty {
    return {1, 2};  // ERROR: Empty literal expects 0 fields, got 2
}
